# forwardlib

./: README.md  go.mod  go.sum  pyproject.toml
client/handler/: handler.go
client/handlers/: forward.go  grpc.go  reverse.go  socks.go
common/: common.go
protobuf/clientpb/: client.pb.go  client.proto  client_grpc.pb.go
protobuf/commonpb/: common.proto
server/handler/: handler.go
server/rpc/: reverse.go  rpc.go
tools/: fwdctrl.py
tools/clientpb/: client_pb2.py  client_pb2.pyi  client_pb2_grpc.py
tools/commonpb/: common_pb2.py  common_pb2.pyi
